# greentic-dev

./: .gitignore  AUDIT.md  Cargo.toml  Makefile  SECURITY_FIX_REPORT.md  build.rs  coverage-policy.json  pr-changed-files.txt  pr-comment.md
.codex/: PR-03-stage2_surgical_update.md  PR-DEV-INSTALL.md  repo_overview.md
.codex/done/: PR-01-Wizard.md  PR-02-stage1_audit.md  PR-03-stage2_surgical_update.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  nightly.yml  perf.yml  release.yml
.i18n/: translator-state.json
assets/wizard-ui/: app.js  index.html  style.css
benches/: perf.rs
ci/: coverage.sh  i18n_check.py  local_check.sh
docs/: cli.md  developer-guide.md
docs/audits/: greentic-dev-commercial-install.md
docs/wizard/: README.md  architecture.md  audit-pr-02-current-implementation.md  audit.md  dev-workbench.md
i18n/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
schemas/: ygtc.flow.schema.json
src/: bundle_cmd.rs  cli.rs  component_add.rs  component_cli.rs  component_resolver.rs  config.rs  coverage_cmd.rs  i18n.rs  install.rs  lib.rs  main.rs  mcp_cmd.rs  pack_verify.rs  passthrough.rs
src/delegate/: component.rs
src/dev_runner/: registry.rs  runner.rs  schema.rs
src/util/: process.rs
src/wizard/: confirm.rs  executor.rs  mod.rs  plan.rs  provider.rs
src/wizard/ui/: assets.rs  mod.rs
templates/component/: Cargo.toml.in  provider.toml
tests/: cli_external_subcommand_fallback.rs  cli_i18n_help.rs  developer_guide_e2e.rs  perf_scaling.rs  perf_timeout.rs  wizard_cli.rs
tests/fixtures/real_components/: README.md  lock.json
tests/support/: perf_harness.rs
tools/: i18n.sh  refresh_real_components.sh
xtask/templates/: docs_getting_started.md
