[package]
name = "greentic-dev"
version = "0.4.57"
edition = "2024"
description = "Developer CLI and local tooling for Greentic flows, packs, and components"
license = "MIT"
repository = "https://github.com/greenticai/greentic-dev"
homepage = "https://greentic.ai/"
documentation = "https://docs.rs/greentic-dev"
# Ensure runtime assets ship with the crate.
include = [
    "src/**",
    "templates/**",
    "README.md",
    "LICENSE*",
    "Cargo.toml",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/greentic-dev-v{ version }-{ target }.tgz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[workspace]
members = ["xtask"]
resolver = "2"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_yaml_bw = {package="serde_yaml_gtc", version="2.5.2"}
once_cell = "1.19"
convert_case = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
toml = "0.9"
toml_edit = "0.23"
semver = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["macros", "formatting"] }
wit-component = "0.245"
wit-parser = "0.245"
base64 = "0.22"
greentic-interfaces = { version = "0.4", default-features = false, features = ["describe-v1"] }
greentic-types = { version = "0.4", features = ["serde"] }
greentic-flow = "0.4"
greentic-pack-lib = "0.4"
greentic-component = { version = "0.4", features = ["prepare", "describe", "cli"] }
jsonschema = "0.42"
tempfile = "3"
dirs = "6"
which = "8"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
bytes = "1.7"
async-compression = "0.4"
flate2 = "1"
tar = "0.4"
oci-distribution = { version = "0.11", default-features = false, features = ["rustls-tls"] }
greentic-distributor-client = { version = "0.4", features = ["http-runtime", "pack-fetch"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
rpassword = "7"
sys-locale = "0.3"
unic-langid = "0.9"

[workspace.metadata.dist]
cargo-dist-version = "0.24"
ci = ["github"]
installers = ["shell"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]

[workspace.metadata.dist.package.greentic-dev]
all-features = false

[dev-dependencies]
httpmock = "0.8"
walkdir = "2"
blake3 = "1"
indexmap = "2"
greentic-secrets-api = "0.4"
async-trait = "0.1"
assert_cmd = "2"
predicates = "3"

[build-dependencies]
serde_json = "1.0"
